2.1.0/_sources/gallery/api/joinstyle.rst.txt


.. _sphx_glr_gallery_api_joinstyle.py:


===========
Join styles
===========

Illustrate the three different join styles




.. image:: /gallery/api/images/sphx_glr_joinstyle_001.png
    :align: center





.. code-block:: python


    import numpy as np
    import matplotlib.pyplot as plt


    def plot_angle(ax, x, y, angle, style):
        phi = np.radians(angle)
        xx = [x + .5, x, x + .5*np.cos(phi)]
        yy = [y, y, y + .5*np.sin(phi)]
        ax.plot(xx, yy, lw=8, color='blue', solid_joinstyle=style)
        ax.plot(xx[1:], yy[1:], lw=1, color='black')
        ax.plot(xx[1::-1], yy[1::-1], lw=1, color='black')
        ax.plot(xx[1:2], yy[1:2], 'o', color='red', markersize=3)
        ax.text(x, y + .2, '%.0f degrees' % angle)

    fig, ax = plt.subplots()
    ax.set_title('Join style')

    for x, style in enumerate((('miter', 'round', 'bevel'))):
        ax.text(x, 5, style)
        for i in range(5):
            plot_angle(ax, x, i, pow(2.0, 3 + i), style)

    ax.set_xlim(-.5, 2.75)
    ax.set_ylim(-.5, 5.5)
    plt.show()

**Total running time of the script:** ( 0 minutes  0.066 seconds)



.. only :: html

 .. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: joinstyle.py <joinstyle.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: joinstyle.ipynb <joinstyle.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
